Fix 7 compilation errors across pension management system
- PaymentResponse: Change PaymentStatus.COMPLETED to SUCCESS (enum mismatch)
- AnalyticsService: Add missing getSystemStatistics() method to interface
- AnalyticsServiceImpl: Implement getSystemStatistics() method
- AnalyticsServiceImpl: Fix BigDecimal/double type conversion (remove .doubleValue())
- ContributionServiceImpl: Fix LocalDate to LocalDateTime conversion (add .atStartOfDay())
- EmployerRepository: Add countByActiveTrue() method for statistics